<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegistSatuAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/mregular"
                android:text="Ubah Profil"
                android:textColor="#FFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="3dp"
                android:text="Kami menyarankan untuk menggunakan informasi dan data yang valid"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/name_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/bio_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/username_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/password_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/email_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_view_circle_pic"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:id="@+id/circleView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2">

                <ImageView
                    android:id="@+id/photo_edit_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_nopic"
                    app:layout_constraintBottom_toBottomOf="@+id/view2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view2" />

            </com.github.florent37.shapeofview.shapes.CircleView>

            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="180dp"
                android:background="@drawable/bg_btn_plus_blue"
                android:fontFamily="@font/mmedium"
                android:text="+"
                android:textColor="#FFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/circleView"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/circleView" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mmedium"
                android:text="Simpan"
                android:textColor="#FFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_layout_white"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/btn_continue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>